# globgroups.py

./: Justfile  pyproject.toml
src/globgroups/: __init__.py
tests/globgroups/: test_basic.py
