[project]
name = "globgroups"
description = """Expands glob groups like foo{bar,baz} -> ["foobar", "foobaz"]"""
authors = [
  { name = "Techcable", email = "git at techcable.net" },
]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]

[dependencies]
funcparserlib = "1.0.1"
typing_expansions = ">=4.4"

[project.urls]
homepage = "https://github.com/Techcable/globgroups"
repository = "https://github.com/Techcable/globgroups"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
# NOTE: Using a version file avoids some overhead
#
# This file is explicitly ignored by version control.
write_to = "src/globgroups/_version.py"

